syntax = "proto3";
option go_package = "proto/notification";

// The greeting service definition.
service ReservationNotification {
  // Sends a greeting
  rpc ReservationAccepted (ReservationAcceptedRequest) returns (ReservationAcceptedResponse);
    rpc ReservationRejected (ReservationRejectedRequest) returns (ReservationRejectedResponse);

}

// The request message containing the user's name.
message ReservationAcceptedRequest {
  string hostId=1;
  string accomId=2;
  string guestId=3;
}

// The response message containing the greetings.
message ReservationAcceptedResponse {
}

message  ReservationRejectedRequest{
    string hostId=1;
    string accomId=2;
    string guestId=3;
}

message ReservationRejectedResponse {
}