syntax = "proto3";

service ReservationServiceRPC{
  rpc GetActiveForHost(GetActiveForHostRequest) returns (GetActiveForHostResponse);
  rpc GetActiveForGuest(GetActiveForGuestRequest) returns (GetActiveForGuestResponse);
  rpc GetAllForGuest(GetAllForGuestRequest) returns (GetAllForGuestResponse);
   rpc GetAllForHost(GetAllForHostRequest) returns (GetAllForHostResponse);
  rpc GetCancellationNumberForGuest(GetCancellationNumberForGuestRequest) returns (GetCancellationNumberForGuestResponse);
  rpc AcceptReservation(AcceptReservationRequest) returns (AcceptReservationResponse);
  rpc SendReservationRequest(SendReservationRequestRequest) returns (SendReservationRequestResponse);
  rpc DeleteReservationRequest(DeleteReservationRequestRequest) returns (DeleteReservationRequestResponse);
  rpc CancelReservation(CancelReservationRequest) returns (CancelReservationResponse);
  rpc GetReservationRequestsForGuest(GetReservationRequestsForGuestRequest) returns (GetReservationRequestsForGuestResponse);
  rpc GetReservationRequestsForHost(GetReservationRequestsForHostRequest) returns (GetReservationRequestsForHostResponse);
  rpc DenyReservationRequest(DenyReservationRequestRequest) returns (DenyReservationRequestResponse);
}

message ReservationRequest {
  string hostId = 2;
  string guestId = 3;
  string accommodationId = 4;
  string startDate = 5;
  string endDate = 6;
  int32 guestCount = 7;
}

message ReservationAddress {
  string id = 1;
  string country = 2;
  string city = 3;
  string streetAddress = 4;
}

message ReservationView {
    string ReservationId     =1;
    string HostName          =2;
    string GuestName         =3;
    string AccommodationName =4;
    string Address = 5;
    string startDate = 6;
    string endDate = 7;
    int32 GuestCount = 8;
    string status = 9;
}

message ReservationTimeFrame {
  string startDate = 6;
  string endDate = 7;
}

message GetActiveForHostRequest{
    string hostId = 1;
}

message GetActiveForHostResponse{
    repeated ReservationView reservations =1;
}

message GetActiveForGuestRequest{
    string guestId = 1;
}

message GetActiveForGuestResponse{
    repeated ReservationView reservations = 1;
}

message GetAllForGuestRequest{
    string guestId = 1;
}

message GetAllForHostRequest{
    string hostId = 1;
}

message GetAllForGuestResponse{
    repeated ReservationView reservations = 1;
}

message GetAllForHostResponse{
    repeated ReservationView reservations = 1;
}

message GetCancellationNumberForGuestRequest{
    string guestId = 1;
}

message GetCancellationNumberForGuestResponse{
    int32 cancellationNumber = 1;
}

message AcceptReservationRequest{
    string reservationId = 1;
}

message AcceptReservationResponse{
    bool response = 1;
}

message SendReservationRequestRequest{
    ReservationRequest request = 1;
}

message SendReservationRequestResponse{
    bool response = 1;
}

message DeleteReservationRequestRequest{
    string reservationId = 1;
}

message DeleteReservationRequestResponse{
    bool response = 1;
}

message CancelReservationRequest{
    string reservationId = 1;
}

message CancelReservationResponse{
    bool response = 1;
}

message GetReservationRequestsForGuestRequest{
    string guestId = 1;
}

message GetReservationRequestsForGuestResponse{
    repeated ReservationView requests = 1; 
}

message GetReservationRequestsForHostRequest{
    string hostId = 1;
}

message GetReservationRequestsForHostResponse{
    repeated ReservationView requests = 1; 
}

message DenyReservationRequestRequest{
    string reservationId = 1;
}

message DenyReservationRequestResponse{
    bool response = 1;
}

